--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,5 +14,7 @@
  *= require_self
  */
 
-@import "bootstrap-sass-official/assets/stylesheets/_bootstrap-sprockets";
+/*@import "bootstrap-sass-official/assets/stylesheets/_bootstrap-sprockets";
+*/
+
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap";
