added angular templates

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,17 +1,6 @@
-
-
-<div class="container-fluid" ng-app='portsapp'>
-  <p> this is home controller speaking </p>
-  <div class = "panel panel-success">
-    <div class="panel-heading">
-      <h1 ng-if="name">Hello, {{name}}</h1>
-    </div>
-    <div class="panel-body">
-      <form class="form-inline">
-        <div class="form-group">
-          <input class="form-control" type="text" palaceholder="enter you name" autofocus ng-model="name">
-        </div>
-      </form>
+<div ng-app="portsapp">
+  <div class="view-container">
+    <div ng-view class="view-frame animate-view">
     </div>
   </div>
 </div>
