--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,13 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <base href="/"></base>
 </head>
-<body>
-
-<%= yield %>
-
+<body ng-app='portsapp'>
+<div class="container">
+  <div class="view-container">
+    <%= yield %>
+  </div>
+</div>
 </body>
 </html>
