--- a/public/templates/main.html
+++ b/public/templates/main.html
@@ -1,1 +1,7 @@
+<div class = "container">
+
+<div class = 'jumbotron'> <h1> Hello, {{user.first_name}} {{user.last_name}} {{user.email}} </h1></div>
+
 <p> Hello! </p>
+
+</div>
